--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,11 @@ body {
 
 #navButtons {
     list-style: none;
-    font-size: 30px;
+}
+
+.button.primary.mystyles {
+    background-color: darkred;
+    font-size: 20px;
     border-radius: 5%;
     display: inline-block;
 }
