--- a/assets/style.css
+++ b/assets/style.css
@@ -1,18 +1,121 @@
 * {
     font-family: sans-serif;
     font-size: 40px;
-};
-body {
-    background-color:rgb(107, 102, 102)
-};
+    font-size: 18px;
+}
 
-#navButtons {
-    list-style: none;
-};
+.header {
+    display: flex;
+    width: 100%;
+}
+
+nav {
+    width: 100%;
+    float: right;
+    text-align: right;
+    margin-top: 1%;
+}
+
+h1 {
+    color: darkred;
+    margin-left: 1%;
+    font-size: 66px;
+    font-family: monospace;
+    float: left;
+}  
 
 .button.primary.mystyles {
     background-color: darkred;
     font-size: 20px;
     border-radius: 5%;
-    display: inline-flex;
-};
+    float: right;
+    margin-right: 7px;
+    border: solid;
+    border-width: 3px;
+}
+
+.button.primary.mystyles:hover {
+    opacity: 0.7;
+}
+
+body {
+    background-color:rgb(107, 102, 102);
+    background-image: url("https://c.tenor.com/spyhJRVI474AAAAi/musical-notes-joypixels.gif");
+    background-repeat:no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-size: 25%;
+    background-position: 68%;   
+}
+
+p.bio {
+    color: white;
+    font-size: 20px; 
+    margin-left: 1%;
+    font-style: italic;
+    margin-top: 2%;
+}
+.container {
+    display: flex;
+}
+
+.searchBar {
+    width: 20%;
+    border: black;
+    border: solid;
+    border-width: 3px;
+    margin-left: 1%;
+    margin-top: .8%;
+    margin-bottom: 8%;
+}
+
+#searchBtn {
+    background-color: darkred;
+    font-size: 18px;
+    border-radius: 5%;
+    margin-left: 1%;
+    border: solid;
+    border-width: 3px;  
+    margin-top: .4%;
+    margin-bottom: 8%;
+}
+
+#searchBtn:hover {
+    opacity: 0.7;
+}   
+    
+.card {
+    margin-left: 1%;
+}
+
+.card-divider {
+    color: darkred;
+    font-size: 24px;
+    font-weight: bold;
+    background-color: darkgray;
+}
+
+.card-section {
+    background-color: darkred;
+}
+
+p.details {
+    color: white;
+    font-size: 20px; 
+    font-style: italic;
+}
+
+.searchResults {
+    font-size: 22px;
+    margin-left: 10%;
+    color: white;
+}
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 2%;
+}
