--- a/assets/style.css
+++ b/assets/style.css
@@ -59,7 +59,7 @@ p.bio {
     display: flex;
 }
 
-.searchBar {
+.search-bar {
     width: 20%;
     border: black;
     border: solid;
@@ -69,7 +69,7 @@ p.bio {
     margin-bottom: 8%;
 }
 
-#searchBtn {
+#search-btn {
     background-color: darkred;
     font-size: 18px;
     border-radius: 5%;
@@ -80,7 +80,7 @@ p.bio {
     margin-bottom: 8%;
 }
 
-#searchBtn:hover {
+#search-btn:hover {
     opacity: 0.7;
 }   
     
@@ -105,7 +105,7 @@ p.details {
     font-style: italic;
 }
 
-.searchResults {
+.search-results {
     font-size: 22px;
     margin-left: 10%;
     color: white;
