--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@
     font-family: sans-serif;
     font-size: 40px;
     font-size: 18px;
+    box-sizing: border-box;
 }
 
 .header {
@@ -25,11 +26,14 @@ h1 {
 }  
 
 .button-styles {
-    size: 20px;
-}
+    margin: 15px 20px 10px 20px;
+    font-size: 40px;
+   
+} 
 
-.button.primary.mystyles:hover {
+.button-styles:hover {
     opacity: 0.7;
+    cursor: pointer;
 }
 
 body {
@@ -39,7 +43,7 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-size: 25%;
-    background-position: 68%;   
+    background-position: 68%;
 }
 
 p.bio {
@@ -60,7 +64,6 @@ p.bio {
     border-width: 3px;
     margin-left: 1%;
     margin-top: .8%;
-    margin-bottom: 8%;
 }
 
 #search-btn {
@@ -71,7 +74,7 @@ p.bio {
     border: solid;
     border-width: 3px;  
     margin-top: .4%;
-    margin-bottom: 8%;
+    margin-bottom: 4%;
 }
 
 #search-btn:hover {
@@ -106,10 +109,9 @@ p.details {
 }
 
 .footer {
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     text-align: center;
-    margin-bottom: 2%;
+    margin-top: 5%;  
 }
