--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@
     font-family: sans-serif;
     font-size: 40px;
     font-size: 18px;
+    box-sizing: border-box;
 }
 
 .header {
@@ -24,18 +25,15 @@ h1 {
     float: left;
 }  
 
-.button.primary.mystyles {
-    background-color: darkred;
-    font-size: 20px;
-    border-radius: 5%;
-    float: right;
-    margin-right: 7px;
-    border: solid;
-    border-width: 3px;
-}
+.button-styles {
+    margin: 15px 20px 10px 20px;
+    font-size: 40px;
+   
+} 
 
-.button.primary.mystyles:hover {
+.button-styles:hover {
     opacity: 0.7;
+    cursor: pointer;
 }
 
 body {
@@ -45,7 +43,7 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-size: 25%;
-    background-position: 68%;   
+    background-position: 68%;
 }
 
 p.bio {
@@ -66,7 +64,6 @@ p.bio {
     border-width: 3px;
     margin-left: 1%;
     margin-top: .8%;
-    margin-bottom: 8%;
 }
 
 #search-btn {
@@ -77,7 +74,7 @@ p.bio {
     border: solid;
     border-width: 3px;  
     margin-top: .4%;
-    margin-bottom: 8%;
+    margin-bottom: 4%;
 }
 
 #search-btn:hover {
@@ -112,10 +109,9 @@ p.details {
 }
 
 .footer {
-    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     text-align: center;
-    margin-bottom: 2%;
+    margin-top: 5%;  
 }
