--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,8 +59,8 @@ p.bio {
 
 .search-bar {
     width: 20%;
-    border-color: darkred;
     border: solid;
+    border-color: darkred;
     border-width: 3px;
     border-radius: 5%;
     margin-left: 1%;
@@ -122,7 +122,12 @@ p.details {
 a {
     color: black;
 }
+
 a:hover {
     opacity: 0.7;
     cursor: pointer;
+}
+
+a:visited {
+    color: black;
 }
